--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -81,6 +81,8 @@
       <l:template name="intra-sect2" text="Section&#160;%n ”%t”"/>
       <l:template name="intra-sect3" text="Section&#160;%n ”%t”"/>
       <l:template name="intra-sect4" text="Section&#160;%n ”%t”"/>
+      <l:template name="intra-sect5" text="Section&#160;%n ”%t”"/>
+      <l:template name="intra-section" text="Section&#160;%n ”%t”"/>
 
       <l:template name="intra-example" text="Exempel&#160;%n ”%t”"/>
       <l:template name="intra-figure" text="Figur&#160;%n ”%t”"/>
