--- a/suse2013/common/l10n/fr.xml
+++ b/suse2013/common/l10n/fr.xml
@@ -83,6 +83,8 @@
       <l:template name="intra-sect2" text="Section&#160;%n «&#160;%t&#160;»"/>
       <l:template name="intra-sect3" text="Section&#160;%n «&#160;%t&#160;»"/>
       <l:template name="intra-sect4" text="Section&#160;%n «&#160;%t&#160;»"/>
+      <l:template name="intra-sect5" text="Section&#160;%n «&#160;%t&#160;»"/>
+      <l:template name="intra-section" text="Section&#160;%n «&#160;%t&#160;»"/>
 
       <l:template name="intra-example" text="Exemple&#160;%n «&#160;%t&#160;»"/>
       <l:template name="intra-figure" text="Figure&#160;%n «&#160;%t&#160;»"/>
