--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -62,6 +62,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="Figure&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="Procedure&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="Table&#160;%n:"/>
