--- a/suse2013/common/l10n/no.xml
+++ b/suse2013/common/l10n/no.xml
@@ -49,6 +49,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="Figur&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="Prosedyre&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="Tabell&#160;%n:"/>
