--- a/suse2013/common/l10n/ar.xml
+++ b/suse2013/common/l10n/ar.xml
@@ -33,6 +33,8 @@ translators apparently want those. - sknorr, 2016-09-30 -->
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="الرسم التوضيحي&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="الإجراء&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="الجدول&#160;%n:"/>
