--- a/suse2013/common/l10n/cs.xml
+++ b/suse2013/common/l10n/cs.xml
@@ -47,6 +47,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="Obr&#225;zek&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="Postup&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="Tabulka&#160;%n:"/>
