--- a/suse2013/common/l10n/it.xml
+++ b/suse2013/common/l10n/it.xml
@@ -54,6 +54,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="Figura %n:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="Procedura %n:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="Tabella %n:"/>
