--- a/suse2013/common/l10n/ko.xml
+++ b/suse2013/common/l10n/ko.xml
@@ -55,6 +55,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text=" &#44536;&#47548; %n:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="&#51208;&#52264; %n:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="&#54364;&#160;%n:"/>
