--- a/suse2013/common/l10n/lt_lt.xml
+++ b/suse2013/common/l10n/lt_lt.xml
@@ -52,6 +52,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="%n&#160;pav.:"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="%n&#160;proced&#363;ra:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="%n&#160;lentel&#279;:"/>
