--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -58,6 +58,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="&#22270; %n︰"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="&#36807;&#31243; %n︰"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="&#34920; %n︰"/>
