--- a/suse2013/common/l10n/zh_tw.xml
+++ b/suse2013/common/l10n/zh_tw.xml
@@ -82,6 +82,8 @@
       <l:template name="example-title" text="%t"/>
       <l:template name="figure-label" text="&#22294;&#24418; %n︰"/>
       <l:template name="figure-title" text="%t"/>
+      <l:template name="glosslist-label" text=""/>
+      <l:template name="glosslist-title" text="%t"/>
       <l:template name="procedure-label" text="&#31243;&#24207; %n︰"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="&#34920;&#26684; %n︰"/>
