--- a/suse2013/common/l10n/ar.xml
+++ b/suse2013/common/l10n/ar.xml
@@ -26,6 +26,12 @@ translators apparently want those. - sknorr, 2016-09-30 -->
    <l:dingbat key="startquote" text='"'/>
    <l:dingbat key="endquote" text='"'/>
 
+   <!-- FIXME: Needs translation. -->
+   <l:context name="bypass-block">
+     <l:template name="bypass-to-content" text="Jump to content"/>
+     <l:template name="bypass-to-nav" text="Jump to page navigation: previous page [access key p]/next page [access key n]"/>
+   </l:context>
+
    <l:context name="styles">
       <l:template name="person-name" text="الأول-الأخير"/>
 
