--- a/suse2013/common/l10n/ko.xml
+++ b/suse2013/common/l10n/ko.xml
@@ -48,6 +48,12 @@
 <!-- edited from docbook version-->
    <l:gentext key="TIP" text="[&#52628;&#44032;&#32;&#51221;&#48372;]"/><l:gentext key="WARNING" text="&#51452;&#51032;"/>
 
+   <!-- FIXME: Needs translation. -->
+   <l:context name="bypass-block">
+     <l:template name="bypass-to-content" text="Jump to content"/>
+     <l:template name="bypass-to-nav" text="Jump to page navigation: previous page [access key p]/next page [access key n]"/>
+   </l:context>
+
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
