--- a/suse2013/common/l10n/ja.xml
+++ b/suse2013/common/l10n/ja.xml
@@ -97,7 +97,7 @@
       <l:template name="appendix" style="nonumber" text="&#20184;&#37682; 「%t」"/>
       <l:template name="bridgehead" style="nonumber" text="&#38917; 「%t」"/>
       <l:template name="chapter" style="nonumber" text="&#31532; &#049; &#31456; 「%t」"/>
-      <l:template name="chapter" text="&#31532;%n&#31456; %t"/>
+      <l:template name="chapter" text="&#31532;%n&#31456; 「%t」"/>
       <l:template name="equation" style="nonumber" text="&#24335; 「%t」"/>
       <l:template name="example" style="nonumber" text="&#20363; 「%t」"/>
       <l:template name="figure" style="nonumber" text="&#22259; 「%t」"/>
